# smartpay-be

./: .env.dev  .env.example  .env.prod  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  deploy.sh  docker-compose.dev.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: build.yml  ci.yml  db-migration.yaml  db-migration.yml  deploy-on-tag.yml
alembic/: README  env.py
alembic/versions/: 1fc693371546_initial_test_migations.py  65aed8a9a363_core_models.py  71e068c91fee_add_notif_setting_column_nullable_with_.py  78be47d626ec_models_reverse_with_uuid4.py  8a14e5a4cc2c_add_card_id_to_transaction_model.py  8b9d57396e7d_fix_migrations.py  986d871baabd_add_metadata_field_to_notifications.py  afca1e3d4768_add_notifications_table.py  bcc577d3027c_add_meta_data_fields_to_item_model.py  d203ae228b18_create_users_and_related_tables.py  dcf268d4c694_notification_setting_model.py  df1858e9bca1_add_fullname_to_users.py  eb1bf64bdab6_create_users_table.py  efff0e0dc480_add_ratelimitlog_in_models_py.py  f04a009db116_card_id_addition.py  ff99ebbe066d_add_tags_and_item_tag_tables.py
app/: __init__.py  main.py  ws_routes.py
app/api/: __init__.py  dependencies.py  errors.py  i18n.py  middleware.py  responses.py  utils.py  websockets.py
app/api/routes/v1/: admin.py  auth.py  notification.py  notifications.py  paymentCard.py  profile.py  setting.py  wallet.py
app/api/routes/v1/endpoints/: errors.py  health.py
app/api/routes/v1/endpoints/websockets/: __init__.py  notifications.py
app/api/websockets/: notifications_ws.py
app/core/: config.py  events.py  logging.py  metrics.py  security.py  tracing.py
app/db/: session.py
app/db/models/: __init__.py  category.py  item.py  models.py
app/schemas/: __init__.py  items.py  schemas.py
app/services/: items.py
app/utils/: connection_manager.py  notifier.py  resend_mailer.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod
docker/postgres/: Dockerfile  init-db.sh
environments/prod/: values.yaml
tests/: conftest.py
tests/api/: test_dependencies.py  test_health.py  test_i18n.py  test_utils.py  test_websocket.py
tests/api/routes/: errors.py  test_errors.py
tests/api/routes/v1/: test_admin.py  test_auth.py  test_notifications.py  test_paymentCard.py  test_profile.py  test_wallet.py
tests/core/: test_logging.py  test_security.py
tests/db/: test_session.py
tests/schemas/: test_schemas.py
tests/utils/: test_resend_mailer.py
